# nodeskclaw

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  dev.sh  docker-compose.ee.yml  docker-compose.yml
claw-buddy-backend/: Dockerfile  pyproject.toml
claw-buddy-backend/app/: main.py
claw-buddy-backend/app/api/: auth.py  clusters.py  deploy.py  events.py  instances.py  registry.py  router.py  settings.py
claw-buddy-backend/app/core/: config.py  deps.py  exceptions.py  middleware.py  security.py
claw-buddy-backend/app/models/: __init__.py  base.py  cluster.py  deploy_record.py  instance.py  system_config.py  user.py
claw-buddy-backend/app/schemas/: advanced_config.py  auth.py  cluster.py  common.py  deploy.py  instance.py
claw-buddy-backend/app/services/: auth_service.py  cluster_service.py  config_service.py  deploy_service.py  health_checker.py  instance_service.py  registry_service.py
claw-buddy-backend/app/services/k8s/: client_manager.py  event_bus.py  k8s_client.py  resource_builder.py
claw-buddy-backend/app/utils/: feishu.py
claw-buddy-backend/tests/: conftest.py
claw-buddy-frontend/: index.html  package-lock.json  package.json  vite.config.ts
deploy/: README.md  cli.sh
docs/: Compute-Provider-Deployment-Guide.md  Hermes-第三引擎接入方案.md  openclaw-channel-dingtalk-analysis.md  wecom-channel-design.md  wecom-channel-plugin-design.md
nodeskclaw-artifacts/: build.sh  common.sh
nodeskclaw-backend/: .env.example  Dockerfile  README.md  pyproject.toml
nodeskclaw-frontend/: vite.config.ts
(+202 files in other folders)
